--- a/home.html
+++ b/home.html
@@ -38,7 +38,19 @@
 
         <article>
             <figure>
-                <img src="https://www.woolha.com/media/2020/01/Screen-Shot-2020-01-31-at-10.35.47-AM.png" alt="סרט חדש">
+                <img src="3.cinema.webp" alt="סרט חדש">
+            </figure>
+            <figure>
+                <img src="7.cinema.webp" alt="סרט חדש">
+            </figure>
+            <figure>
+                <img src="11.cinema.webp" alt="סרט חדש">
+            </figure>
+            <figure>
+                <img src="6.cinema.webp" alt="סרט חדש">
+            </figure>
+            <figure>
+                <img src="10.cinema.webp" alt="סרט חדש">
             </figure>
         </article>
  
