--- a/home.html
+++ b/home.html
@@ -11,11 +11,11 @@
 <body>
     <header>
         <nav>
-            <table >
+            <table>
                 <thead>
-                    <th colspan="100%">לניווט באתר</th>
+                    <!-- <th colspan="100%">קולנוע מדע בדיוני ופנטזיה אינטראקטיבי</th> -->
                 </thead>
-                <tbody >
+                <tbody>
                     <tr>
                         <td><a href="home.html">דף הבית</a></td>
                         <td><a href="movise.html">סרטים</a></td>
@@ -23,37 +23,53 @@
                     </tr>
                 </tbody>
                 <tfoot>
-                    <td colspan="100%">והכי חשוב שתהנו</td>
+                    <td colspan="100%">פתוח בין השעות 15:00 עד 23:00</td>
                 </tfoot>
-
             </table>
         </nav>
 
     </header>
     <main>
         <article>
-                   <h1>קולנוע מדע בדיוני ופנטזיה אינטראקטיבי</h1>
-        <h2>כאן תוכלו לצפות בכל הסרטים החדשים</h2>
+            <h1>קולנוע מדע בדיוני ופנטזיה אינטראקטיבי</h1>
+            <h2>כאן תוכלו לצפות בכל הסרטים החדשים</h2>
         </article>
 
         <article>
             <figure>
-                <img src="3.cinema.webp" alt="סרט חדש">
-            </figure>
-            <figure>
-                <img src="7.cinema.webp" alt="סרט חדש">
-            </figure>
-            <figure>
-                <img src="11.cinema.webp" alt="סרט חדש">
-            </figure>
-            <figure>
-                <img src="6.cinema.webp" alt="סרט חדש">
-            </figure>
-            <figure>
-                <img src="10.cinema.webp" alt="סרט חדש">
+                <img src="12.cinema.webp" alt="סרט חדש">
+                <figcaption>הסרטים שלנו</figcaption>
             </figure>
         </article>
- 
+
+        <article>
+            <figure>
+                <h2>לרשימת הסרטים החדשים ביותר המוקרנים כעת</h2>
+                <ol>
+                    <li>Lorem, ipsum dolor</li>
+                    <li>Lorem, ipsum dolor</li>
+                    <li>Lorem, ipsum dolor</li>
+                    <li>Lorem, ipsum dolor</li>
+                    <li>Lorem, ipsum dolor</li>
+                </ol>
+            </figure>
+        </article>
+        <article>
+            <figure>
+                <h2>לרשימת הסרטים הטובים בכל הזמנים</h2>
+                <ul>
+                    <li>Lorem ipsum dolor sit</li>
+                    <li>Lorem ipsum dolor sit</li>
+                    <li>Lorem ipsum dolor sit</li>
+                    <li>Lorem ipsum dolor sit</li>
+                    <li>Lorem ipsum dolor sit</li>
+                </ul>
+            </figure>
+
+        </article>
+
+
+
 
     </main>
     <footer>
