--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>cinema</title>
     <meta http-equiv="refresh" content="0; url=home.html">
     <link rel="stylesheet" href="style.css">
 </head>
