--- a/movies.html
+++ b/movies.html
@@ -11,21 +11,21 @@
 <body>
     <header>
         <nav>
-            <table>
-                <thead>
-                    <!-- <th colspan="100%">קולנוע מדע בדיוני ופנטזיה אינטראקטיבי</th> -->
-                </thead>
-                <tbody>
-                    <tr>
-                        <td><a href="home.html">דף הבית</a></td>
-                        <td><a href="movise.html">סרטים</a></td>
-                        <td><a href="orders.html">הזמנות</a></td>
-                    </tr>
-                </tbody>
-                <tfoot>
-                    <td colspan="100%">פתוח בין השעות 15:00 עד 23:00</td>
-                </tfoot>
-            </table>
+            <ol>
+                <li><a href="orders.html">הזמנות</a></li>
+                <li><a href="movies.html">סרטים</a></li>
+                <li><a href="home.html">דף הבית</a></li>
+            </ol>
+            <article>
+                <h1>קולנוע מדע בדיוני ופנטזיה אינטראקטיבי</h1>
+                <h2>כאן תוכלו לצפות בכל הסרטים החדשים</h2>
+            </article>
+            <article>
+                <figure>
+                    <img src="horse.webp" alt="פתוח בין השעות 15:00 עד 23:00">
+                    <figcaption>פתוח בין השעות 15:00 עד 23:00</figcaption>
+                </figure>
+            </article>
         </nav>
 
     </header>
@@ -42,8 +42,8 @@
                     voluptatem minus perspiciatis ipsam!</h3>
                 <p>אורך הסרט : 90 דקות</p>
 
-                <label for="rating-slider">בחר דירוג:</label>
-                <input type="range" id="rating-slider" name="rating" min="1" max="10" value="1">
+                <label for="rating-slider0">בחר דירוג:</label>
+                <input type="range" id="rating-slider0" name="rating" min="1" max="10" value="1">
 
             </figure>
             <figure>
@@ -55,8 +55,8 @@
                     perspiciatis ipsam!
                 </h3>
                 <p>אורך הסרט : 90 דקות</p>
-                <label for="rating-slider">בחר דירוג:</label>
-                <input type="range" id="rating-slider" name="rating" min="1" max="10" value="1">
+                <label for="rating-slider1">בחר דירוג:</label>
+                <input type="range" id="rating-slider1" name="rating" min="1" max="10" value="1">
             </figure>
             <figure>
                 <fieldset>Lorem, ipsum dolor</fieldset>
@@ -67,8 +67,8 @@
                     perspiciatis ipsam!
                 </h3>
                 <p>אורך הסרט : 90 דקות</p>
-                <label for="rating-slider">בחר דירוג:</label>
-                <input type="range" id="rating-slider" name="rating" min="1" max="10" value="1">
+                <label for="rating-slider2">בחר דירוג:</label>
+                <input type="range" id="rating-slider2" name="rating" min="1" max="10" value="1">
             </figure>
             <figure>
                 <fieldset>Lorem, ipsum dolor</fieldset>
@@ -79,8 +79,8 @@
                     perspiciatis ipsam!
                 </h3>
                 <p>אורך הסרט : 90 דקות</p>
-                <label for="rating-slider">בחר דירוג:</label>
-                <input type="range" id="rating-slider" name="rating" min="1" max="10" value="1">
+                <label for="rating-slider3">בחר דירוג:</label>
+                <input type="range" id="rating-slider3" name="rating" min="1" max="10" value="1">
             </figure>
             <figure>
                 <fieldset>Lorem, ipsum dolor</fieldset>
@@ -91,17 +91,14 @@
                     perspiciatis ipsam!
                 </h3>
                 <p>אורך הסרט : 90 דקות</p>
-                <label for="rating-slider">בחר דירוג:</label>
-                <input type="range" id="rating-slider" name="rating" min="1" max="10" value="1">
+                <label for="rating-slider4">בחר דירוג:</label>
+                <input type="range" id="rating-slider4" name="rating" min="1" max="10" value="1">
             </figure>
         </article>
 
     </main>
     <footer>
-        <aside>
-
-            כל הזכויות שמורות לקולנוע &copy;
-        </aside>
+        <p>כל הזכויות שמורות לקולנוע &copy;</p>
     </footer>
 </body>
 
