--- a/home.html
+++ b/home.html
@@ -11,36 +11,27 @@
 <body>
     <header>
         <nav>
-            <table>
-                <thead>
-                    <!-- <th colspan="100%">קולנוע מדע בדיוני ופנטזיה אינטראקטיבי</th> -->
-                </thead>
-                <tbody>
-                    <tr>
-                        <td><a href="home.html">דף הבית</a></td>
-                        <td><a href="movise.html">סרטים</a></td>
-                        <td><a href="orders.html">הזמנות</a></td>
-                    </tr>
-                </tbody>
-                <tfoot>
-                    <td colspan="100%">פתוח בין השעות 15:00 עד 23:00</td>
-                </tfoot>
-            </table>
+            <ol>
+                <li><a href="orders.html">הזמנות</a></li>
+                <li><a href="movies.html">סרטים</a></li>
+                <li><a href="home.html">דף הבית</a></li>
+            </ol>
+            <article>
+                <h1>קולנוע מדע בדיוני ופנטזיה אינטראקטיבי</h1>
+                <h2>כאן תוכלו לצפות בכל הסרטים החדשים</h2>
+            </article>
+
+            <article>
+                <figure>
+                    <img src="horse.webp" alt="סוס">
+                    <figcaption>פתוח בין השעות 15:00 עד 23:00</figcaption>
+                </figure>
+            </article>
         </nav>
 
     </header>
     <main>
-        <article>
-            <h1>קולנוע מדע בדיוני ופנטזיה אינטראקטיבי</h1>
-            <h2>כאן תוכלו לצפות בכל הסרטים החדשים</h2>
-        </article>
 
-        <article>
-            <figure>
-                <img src="12.cinema.webp" alt="סרט חדש">
-                <figcaption>הסרטים שלנו</figcaption>
-            </figure>
-        </article>
 
         <article>
             <figure>
@@ -73,10 +64,7 @@
 
     </main>
     <footer>
-        <aside>
-
-            כל הזכויות שמורות לקולנוע &copy;
-        </aside>
+        <p>כל הזכויות שמורות לקולנוע &copy;</p>
     </footer>
 </body>
 
