--- a/orders.html
+++ b/orders.html
@@ -42,9 +42,9 @@
                 <option value="" selected disabled>בחר</option>
                 <option value="programmer"> פרונקציה:</option>
                 <option value="designer"> דיגטה:</option>
-                <option value="other">יעקב:</option>
-                <option value="other"> בעכמה:</option>
-                <option value="other"> להנכחת:</option>
+                <option value="othe4r">יעקב:</option>
+                <option value="other5"> בעכמה:</option>
+                <option value="other6"> להנכחת:</option>
             </select>
 
 
