--- a/movies.html
+++ b/movies.html
@@ -1,38 +1,28 @@
 <!DOCTYPE html>
 <html lang="he">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>סרטים</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <header>
-        <nav>
-            <ol>
-                <li><a href="orders.html">הזמנות</a></li>
-                <li><a href="movies.html">סרטים</a></li>
-                <li><a href="home.html">דף הבית</a></li>
-            </ol>
-            <article>
-                <h1>קולנוע מדע בדיוני ופנטזיה אינטראקטיבי</h1>
-                <h2>כאן תוכלו לצפות בכל הסרטים החדשים</h2>
-            </article>
-            <article>
-                <figure>
-                    <img src="horse.webp" alt="פתוח בין השעות 15:00 עד 23:00">
-                    <figcaption>פתוח בין השעות 15:00 עד 23:00</figcaption>
-                </figure>
-            </article>
-        </nav>
-
-    </header>
+<header>
+    <nav>
+        <ol>
+            <li><a href="orders.html">הזמנות</a></li>
+            <li><a href="movies.html">סרטים</a></li>
+            <li><a href="home.html">דף הבית</a></li>
+        </ol>
+        <h1>קולנוע מדע בדיוני ופנטזיה אינטראקטיבי</h1>
+        <h2>כאן תוכלו לצפות בכל הסרטים החדשים</h2>
+        <figure>
+            <img src="horse.webp" alt="סוס">
+            <figcaption>פתוח בין השעות 15:00 עד 23:00</figcaption>
+        </figure>
+    </nav>
+</header>
     <main>
-        <h1></h1>
-        <h2></h2>
-
         <article>
             <figure>
                 <fieldset>Lorem, ipsum dolor</fieldset>
@@ -41,10 +31,8 @@
                     doloribus possimus, laborum vel laudantium nihil, voluptatibus dicta! Quam nihil reiciendis maxime
                     voluptatem minus perspiciatis ipsam!</h3>
                 <p>אורך הסרט : 90 דקות</p>
-
                 <label for="rating-slider0">בחר דירוג:</label>
                 <input type="range" id="rating-slider0" name="rating" min="1" max="10" value="1">
-
             </figure>
             <figure>
                 <fieldset>Lorem, ipsum dolor</fieldset>
@@ -95,11 +83,9 @@
                 <input type="range" id="rating-slider4" name="rating" min="1" max="10" value="1">
             </figure>
         </article>
-
     </main>
     <footer>
         <p>כל הזכויות שמורות לקולנוע &copy;</p>
     </footer>
 </body>
-
 </html>
