--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="he">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>cinema</title>
-    <meta http-equiv="refresh" content="0; url=home.html">
-    <link rel="stylesheet" href="style.css">
-</head>
+    <meta http-equiv="refresh" content="0; url=home.html" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
-
-</body>
-
+  <body></body>
 </html>
