--- a/movies.html
+++ b/movies.html
@@ -1,91 +1,133 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="he">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>סרטים</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<header>
-    <nav>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <nav>
         <ol>
-            <li><a href="orders.html">הזמנות</a></li>
-            <li><a href="movies.html">סרטים</a></li>
-            <li><a href="home.html">דף הבית</a></li>
+          <li><a href="orders.html">הזמנות</a></li>
+          <li><a href="movies.html">סרטים</a></li>
+          <li><a href="home.html">דף הבית</a></li>
         </ol>
         <h1>קולנוע מדע בדיוני ופנטזיה אינטראקטיבי</h1>
         <h2>כאן תוכלו לצפות בכל הסרטים החדשים</h2>
         <figure>
-            <img src="horse.webp" alt="סוס">
-            <figcaption>פתוח בין השעות 15:00 עד 23:00</figcaption>
+          <img src="horse.webp" alt="סוס" />
+          <figcaption>פתוח בין השעות 15:00 עד 23:00</figcaption>
         </figure>
-    </nav>
-</header>
+      </nav>
+    </header>
     <main>
-        <article>
-            <figure>
-                <fieldset>Lorem, ipsum dolor</fieldset>
-                <img src="3.cinema.webp" alt="סרט חדש">
-                <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore culpa vero fugit ea aperiam,
-                    doloribus possimus, laborum vel laudantium nihil, voluptatibus dicta! Quam nihil reiciendis maxime
-                    voluptatem minus perspiciatis ipsam!</h3>
-                <p>אורך הסרט : 90 דקות</p>
-                <label for="rating-slider0">בחר דירוג:</label>
-                <input type="range" id="rating-slider0" name="rating" min="1" max="10" value="1">
-            </figure>
-            <figure>
-                <fieldset>Lorem, ipsum dolor</fieldset>
-                <img src="7.cinema.webp" alt="סרט חדש">
-                <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore culpa vero fugit ea aperiam,
-                    doloribus possimus,
-                    laborum vel laudantium nihil, voluptatibus dicta! Quam nihil reiciendis maxime voluptatem minus
-                    perspiciatis ipsam!
-                </h3>
-                <p>אורך הסרט : 90 דקות</p>
-                <label for="rating-slider1">בחר דירוג:</label>
-                <input type="range" id="rating-slider1" name="rating" min="1" max="10" value="1">
-            </figure>
-            <figure>
-                <fieldset>Lorem, ipsum dolor</fieldset>
-                <img src="11.cinema.webp" alt="סרט חדש">
-                <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore culpa vero fugit ea aperiam,
-                    doloribus possimus,
-                    laborum vel laudantium nihil, voluptatibus dicta! Quam nihil reiciendis maxime voluptatem minus
-                    perspiciatis ipsam!
-                </h3>
-                <p>אורך הסרט : 90 דקות</p>
-                <label for="rating-slider2">בחר דירוג:</label>
-                <input type="range" id="rating-slider2" name="rating" min="1" max="10" value="1">
-            </figure>
-            <figure>
-                <fieldset>Lorem, ipsum dolor</fieldset>
-                <img src="6.cinema.webp" alt="סרט חדש">
-                <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore culpa vero fugit ea aperiam,
-                    doloribus possimus,
-                    laborum vel laudantium nihil, voluptatibus dicta! Quam nihil reiciendis maxime voluptatem minus
-                    perspiciatis ipsam!
-                </h3>
-                <p>אורך הסרט : 90 דקות</p>
-                <label for="rating-slider3">בחר דירוג:</label>
-                <input type="range" id="rating-slider3" name="rating" min="1" max="10" value="1">
-            </figure>
-            <figure>
-                <fieldset>Lorem, ipsum dolor</fieldset>
-                <img src="10.cinema.webp" alt="סרט חדש">
-                <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore culpa vero fugit ea aperiam,
-                    doloribus possimus,
-                    laborum vel laudantium nihil, voluptatibus dicta! Quam nihil reiciendis maxime voluptatem minus
-                    perspiciatis ipsam!
-                </h3>
-                <p>אורך הסרט : 90 דקות</p>
-                <label for="rating-slider4">בחר דירוג:</label>
-                <input type="range" id="rating-slider4" name="rating" min="1" max="10" value="1">
-            </figure>
-        </article>
+      <article>
+        <figure>
+          <fieldset>Lorem, ipsum dolor</fieldset>
+          <img src="3.cinema.webp" alt="סרט חדש" />
+          <h3>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore
+            culpa vero fugit ea aperiam, doloribus possimus, laborum vel
+            laudantium nihil, voluptatibus dicta! Quam nihil reiciendis maxime
+            voluptatem minus perspiciatis ipsam!
+          </h3>
+          <p>אורך הסרט : 90 דקות</p>
+          <label for="rating-slider0">בחר דירוג:</label>
+          <input
+            type="range"
+            id="rating-slider0"
+            name="rating"
+            min="1"
+            max="10"
+            value="1"
+          />
+        </figure>
+        <figure>
+          <fieldset>Lorem, ipsum dolor</fieldset>
+          <img src="7.cinema.webp" alt="סרט חדש" />
+          <h3>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore
+            culpa vero fugit ea aperiam, doloribus possimus, laborum vel
+            laudantium nihil, voluptatibus dicta! Quam nihil reiciendis maxime
+            voluptatem minus perspiciatis ipsam!
+          </h3>
+          <p>אורך הסרט : 90 דקות</p>
+          <label for="rating-slider1">בחר דירוג:</label>
+          <input
+            type="range"
+            id="rating-slider1"
+            name="rating"
+            min="1"
+            max="10"
+            value="1"
+          />
+        </figure>
+        <figure>
+          <fieldset>Lorem, ipsum dolor</fieldset>
+          <img src="11.cinema.webp" alt="סרט חדש" />
+          <h3>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore
+            culpa vero fugit ea aperiam, doloribus possimus, laborum vel
+            laudantium nihil, voluptatibus dicta! Quam nihil reiciendis maxime
+            voluptatem minus perspiciatis ipsam!
+          </h3>
+          <p>אורך הסרט : 90 דקות</p>
+          <label for="rating-slider2">בחר דירוג:</label>
+          <input
+            type="range"
+            id="rating-slider2"
+            name="rating"
+            min="1"
+            max="10"
+            value="1"
+          />
+        </figure>
+        <figure>
+          <fieldset>Lorem, ipsum dolor</fieldset>
+          <img src="6.cinema.webp" alt="סרט חדש" />
+          <h3>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore
+            culpa vero fugit ea aperiam, doloribus possimus, laborum vel
+            laudantium nihil, voluptatibus dicta! Quam nihil reiciendis maxime
+            voluptatem minus perspiciatis ipsam!
+          </h3>
+          <p>אורך הסרט : 90 דקות</p>
+          <label for="rating-slider3">בחר דירוג:</label>
+          <input
+            type="range"
+            id="rating-slider3"
+            name="rating"
+            min="1"
+            max="10"
+            value="1"
+          />
+        </figure>
+        <figure>
+          <fieldset>Lorem, ipsum dolor</fieldset>
+          <img src="10.cinema.webp" alt="סרט חדש" />
+          <h3>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore
+            culpa vero fugit ea aperiam, doloribus possimus, laborum vel
+            laudantium nihil, voluptatibus dicta! Quam nihil reiciendis maxime
+            voluptatem minus perspiciatis ipsam!
+          </h3>
+          <p>אורך הסרט : 90 דקות</p>
+          <label for="rating-slider4">בחר דירוג:</label>
+          <input
+            type="range"
+            id="rating-slider4"
+            name="rating"
+            min="1"
+            max="10"
+            value="1"
+          />
+        </figure>
+      </article>
     </main>
     <footer>
-        <p>כל הזכויות שמורות לקולנוע &copy;</p>
+      <p>כל הזכויות שמורות לקולנוע &copy;</p>
     </footer>
-</body>
+  </body>
 </html>
