--- a/orders.html
+++ b/orders.html
@@ -1,58 +1,70 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="he">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>הזמנות</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<header>
-    <nav>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <nav>
         <ol>
-            <li><a href="orders.html">הזמנות</a></li>
-            <li><a href="movies.html">סרטים</a></li>
-            <li><a href="home.html">דף הבית</a></li>
+          <li><a href="orders.html">הזמנות</a></li>
+          <li><a href="movies.html">סרטים</a></li>
+          <li><a href="home.html">דף הבית</a></li>
         </ol>
         <h1>קולנוע מדע בדיוני ופנטזיה אינטראקטיבי</h1>
         <h2>כאן תוכלו לצפות בכל הסרטים החדשים</h2>
         <figure>
-            <img src="horse.webp" alt="סוס">
-            <figcaption>פתוח בין השעות 15:00 עד 23:00</figcaption>
+          <img src="horse.webp" alt="סוס" />
+          <figcaption>פתוח בין השעות 15:00 עד 23:00</figcaption>
         </figure>
-    </nav>
-</header>
+      </nav>
+    </header>
     <main>
-        <article>
-            <h1>להזמנת סרט</h1>
-            <h2>בחר סרט להזמנה </h2>
-        </article>
-        <form>
-            <label for="movie">בחר סרט: </label>
-            <select id="movie" name="movie" required>
-                <option value="" selected disabled>בחר</option>
-                <option value="programmer"> פרונקציה:</option>
-                <option value="designer"> דיגטה:</option>
-                <option value="othe4r">יעקב:</option>
-                <option value="other5"> בעכמה:</option>
-                <option value="other6"> להנכחת:</option>
-            </select>
-            <fieldset>
-                <legend>פרטים אישיים</legend>
-                <label for="name">שם פרטי</label>
-                <input type="text" id="name" name="name" placeholder="שם פרטי" required><br>
-                <label for="last">שם משפחה</label>
-                <input type="text" id="last" name="last" placeholder="שם משפחה" required>
-                <br>
-                <button type="submit">הזמן סרט</button>
-            </fieldset>
-        </form>
-        <aside>
-            <address> רחוב הסרוטים 1, תל אביב, ישראל </address>
-        </aside>
+      <article>
+        <h1>להזמנת סרט</h1>
+        <h2>בחר סרט להזמנה</h2>
+      </article>
+      <form>
+        <label for="movie">בחר סרט: </label>
+        <select id="movie" name="movie" required>
+          <option value="" selected disabled>בחר</option>
+          <option value="programmer">פרונקציה:</option>
+          <option value="designer">דיגטה:</option>
+          <option value="othe4r">יעקב:</option>
+          <option value="other5">בעכמה:</option>
+          <option value="other6">להנכחת:</option>
+        </select>
+        <fieldset>
+          <legend>פרטים אישיים</legend>
+          <label for="name">שם פרטי</label>
+          <input
+            type="text"
+            id="name"
+            name="name"
+            placeholder="שם פרטי"
+            required
+          /><br />
+          <label for="last">שם משפחה</label>
+          <input
+            type="text"
+            id="last"
+            name="last"
+            placeholder="שם משפחה"
+            required
+          />
+          <br />
+          <button type="submit">הזמן סרט</button>
+        </fieldset>
+      </form>
+      <aside>
+        <address>רחוב הסרוטים 1, תל אביב, ישראל</address>
+      </aside>
     </main>
     <footer>
-        <p>כל הזכויות שמורות לקולנוע &copy;</p>
+      <p>כל הזכויות שמורות לקולנוע &copy;</p>
     </footer>
-</body>
+  </body>
 </html>
