--- a/home.html
+++ b/home.html
@@ -1,55 +1,55 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="he">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>קולנוע</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header>
-        <nav>
-            <ol>
-                <li><a href="orders.html">הזמנות</a></li>
-                <li><a href="movies.html">סרטים</a></li>
-                <li><a href="home.html">דף הבית</a></li>
-            </ol>
-                <h1>קולנוע מדע בדיוני ופנטזיה אינטראקטיבי</h1>
-                <h2>כאן תוכלו לצפות בכל הסרטים החדשים</h2>
-                <figure>
-                    <img src="horse.webp" alt="סוס">
-                    <figcaption>פתוח בין השעות 15:00 עד 23:00</figcaption>
-                </figure>
-        </nav>
+      <nav>
+        <ol>
+          <li><a href="orders.html">הזמנות</a></li>
+          <li><a href="movies.html">סרטים</a></li>
+          <li><a href="home.html">דף הבית</a></li>
+        </ol>
+        <h1>קולנוע מדע בדיוני ופנטזיה אינטראקטיבי</h1>
+        <h2>כאן תוכלו לצפות בכל הסרטים החדשים</h2>
+        <figure>
+          <img src="horse.webp" alt="סוס" />
+          <figcaption>פתוח בין השעות 15:00 עד 23:00</figcaption>
+        </figure>
+      </nav>
     </header>
     <main>
-        <article>
-            <figure>
-                <h2>לרשימת הסרטים החדשים ביותר המוקרנים כעת</h2>
-                <ol>
-                    <li>Lorem, ipsum dolor</li>
-                    <li>Lorem, ipsum dolor</li>
-                    <li>Lorem, ipsum dolor</li>
-                    <li>Lorem, ipsum dolor</li>
-                    <li>Lorem, ipsum dolor</li>
-                </ol>
-            </figure>
-        </article>
-        <article>
-            <figure>
-                <h2>לרשימת הסרטים הטובים בכל הזמנים</h2>
-                <ul>
-                    <li>Lorem ipsum dolor sit</li>
-                    <li>Lorem ipsum dolor sit</li>
-                    <li>Lorem ipsum dolor sit</li>
-                    <li>Lorem ipsum dolor sit</li>
-                    <li>Lorem ipsum dolor sit</li>
-                </ul>
-            </figure>
-        </article>
+      <article>
+        <figure>
+          <h2>לרשימת הסרטים החדשים ביותר המוקרנים כעת</h2>
+          <ol>
+            <li>Lorem, ipsum dolor</li>
+            <li>Lorem, ipsum dolor</li>
+            <li>Lorem, ipsum dolor</li>
+            <li>Lorem, ipsum dolor</li>
+            <li>Lorem, ipsum dolor</li>
+          </ol>
+        </figure>
+      </article>
+      <article>
+        <figure>
+          <h2>לרשימת הסרטים הטובים בכל הזמנים</h2>
+          <ul>
+            <li>Lorem ipsum dolor sit</li>
+            <li>Lorem ipsum dolor sit</li>
+            <li>Lorem ipsum dolor sit</li>
+            <li>Lorem ipsum dolor sit</li>
+            <li>Lorem ipsum dolor sit</li>
+          </ul>
+        </figure>
+      </article>
     </main>
     <footer>
-        <p>כל הזכויות שמורות לקולנוע &copy;</p>
+      <p>כל הזכויות שמורות לקולנוע &copy;</p>
     </footer>
-</body>
+  </body>
 </html>
